[tool.poetry]
name = "mbt"
version = "0.1.0"
description = ""
authors = ["Tom Waterman <tjwaterman99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
gitpython = "^3.1.30"
dbt-core = "1.4"
pygithub = "^1.57"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
dbt-sqlite = "1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mbt = "mbt.cli:cli"